# Reasoning-in-LLMs

./: BirdCLEF_processing.py  Llama3_1_(8B)_GRPO.ipynb  README.md  efficientnet_birdclef.py  grpo-eval.ipynb  gsm-grpo-main.ipynb  hfd.py  llama-grpo-user.ipynb  logmel.py  mlc-5-cnn.py  neo4j-data-ingestion+analysis.ipynb  phi-grpo.ipynb  postgres-data-analysis.ipynb  postgres-data-ingestion.ipynb  pyproject.toml  qwen-grpo.ipynb  requirements.txt
BirdCLEF Models/: birdclef-efficientnetb0-train.ipynb  birdclef-resnet-train.ipynb  birdclef-vit-train.ipynb  effnet-v2-focal-loss-eval.ipynb  effnet-v2-focal-loss.ipynb  eval-cnn-scratch.ipynb  preprocess-updated.ipynb  preprocess_birdclef.py  push_to_hub.ipynb  train_cnn_scratch.ipynb
mlc/: birdclef.py  bugnist.py  cashflow.py
mlc/test_data/: H02_20230420_074000.csv  consumer_data.parquet  mix_02_006.csv  mix_02_006.tif  transactions.parquet
