[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlc/"]

[project]
name = "mlc"
version = "0.0.1"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "scikit-image",
  "soundfile",
  "pyarrow"
]
authors = [
  { name="Ryan Hammonds", email="ryanphammonds@gmail.com" },
]
description = "Machine Learning Competitions Course"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"